# Liquid-Capsule-Brain

./: .dockerignore  .editorconfig  .env.example  .env.reverse-proxy.example  .gitignore  .pre-commit-config.yaml  BUILD_CONFIG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  ENVIRONMENT_SETUP.md  Executive_Packet.md  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  cleanup-safe.sh  cleanup.sh  docker-compose.override.yml  docker-compose.reverse-proxy.yml  docker-compose.yml  eslint.config.js  launch_capsule_brain.py  lcb_corpus.txt  lcb_extractions.json  lcb_inventory.json  locustfile.py  logging_config.json  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.in  requirements.txt  run_overseer.py  test_document.txt  test_minimal.html  test_overseer.html  test_pdf_ingestion.py  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  python-app.yml
capsule_brain/: __init__.py
capsule_brain/api/: __init__.py  dependencies.py  server.py
capsule_brain/core/: alignment_core.py  belief_state_manager.py  capsule_engine.py  iit_analyzer.py  self_wiring.py
capsule_brain/debugging/: README.md  __init__.py  advanced_debugger.py  api.py  debugger.py  error_tracker.py  health_checker.py  logging_config.py  memory_debugger.py  memory_monitor.py  performance_monitor.py  profiler.py  static_analysis.py
capsule_brain/enhancements/: monitoring_dashboard.py  performance_optimizer.py  security_enhancer.py
capsule_brain/gui/: deployment.py  gui.py  performance.py  security.py
capsule_brain/gui/static/: app.js  app.js.backup  index.html  manifest.json  styles.css  sw.js
capsule_brain/gui/static/mobile/: app.js  index.html  styles.css
capsule_brain/ingestion/: __init__.py  extractor.py
capsule_brain/llm_adapter/: deepseek_client.py  liquid_core.py
capsule_brain/observability/: __init__.py  metrics.py  tracing.py
capsule_brain/planner/: plan.py
capsule_brain/retrieval/: index.py
capsule_brain/security/: admin.py  headers.py  input_sanitizer.py  rate_limiter.py  secrets.py  validators.py
capsule_brain/tools/: aggregator.py
config/: README.md  logging_config.json
config/docker/: docker-compose.override.yml  docker-compose.reverse-proxy.yml  docker-compose.yml
config/monitoring/grafana/provisioning/datasources/: datasource.yml
config/monitoring/prometheus/: prometheus.yml
core_principles/: alignment_core.txt
deploy/cert-manager/: cluster-issuers.yaml
deploy/gitops/argocd/: README.md  appset.yaml  project.yaml
deploy/helm/: helmfile.yaml
deploy/helm/capsule-brain/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/helm/capsule-brain/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  servicemonitor.yaml
deploy/nginx/: Dockerfile  cb.conf.template  entrypoint.sh
deploy/terraform/eks/: README.md  main.tf  variables.tf  versions.tf
deploy/terraform/gke/: README.md  main.tf  variables.tf  versions.tf
docs/: ALERTING.md  DEPLOYMENT.md  DEV_COMPOSE.md  DEV_DOCKER.md  ENHANCEMENTS.md  GITOPS_TERRAFORM.md  GUI_DEPLOYMENT.md  HELM.md  HELMFILE.md  MONITORING.md  README.md  README_EXTENDED.md  SEALED_SECRETS.md  SECURITY.md  TLS_REVERSE_PROXY.md
k8s/: deployment.yaml
monitoring/: README.md  docker-compose.yml
monitoring/grafana/dashboards/: capsule-brain.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: README.md  env_to_secret.sh  health-check.sh  run_dev.sh  seal_secret.sh  setup.sh  smoke_run.py
teacher/: __init__.py  ai_overseer.py  overseer_config.yaml
tests/: conftest.py  test_aggregator.py  test_ai_overseer.py  test_api.py  test_core.py  test_debugging_enhancements.py  test_debugging_simple.py  test_di_overrides.py  test_gui.py  test_gui_comprehensive.py  test_gui_simple.py  test_health.py  test_overseer.py  test_performance.py  test_tools.py
