
[project]
name = "capsule-brain-supreme-agi"
version = "1.0.1"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
exclude = ["grafana/", "prometheus/", "k8s/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # handled by black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = "(grafana|prometheus|k8s|docs)/"

[tool.coverage.run]
branch = true
source = ["capsule_brain"]
omit = ["*/__init__.py"]
[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
